Start adding blocks

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Добавление шрифта Inter с Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
     <title>Знаки ПДД РФ</title>
 </head>
 <body>
-    <div class="card"></div>
-    
+    <div class="card">
+        <div class=caption>
+            <p style="label-warning">Предупреждающие</p>
+            <h2 class="card-h2">Железнодорожный переезд со шлагбаумом</h2>
+        </div>
+    </div>
 </body>
 </html>
