--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="card">
-        <div class=caption>
+        <div class="caption">
             <p style="label-warning">Предупреждающие</p>
             <h2 class="card-h2">Железнодорожный переезд со шлагбаумом</h2>
         </div>
