--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="card">
         <div class=caption>
-            <p style="label-warning">Предупреждающие</p>
+            <p class="label-warning">Предупреждающие</p>
             <h2 class="card-h2">Железнодорожный переезд со шлагбаумом</h2>
         </div>
     </div>
