--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,72 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Users/kozinym/Documents/PDD-Signs/CSS/reset.css">
-    <link rel="stylesheet" href="/Users/kozinym/Documents/PDD-Signs/CSS/styles.css">
+    <link rel="stylesheet" href="file:///E:/Code/PDD-Signs/CSS/reset.css">
+    <link rel="stylesheet" href="file:///E:/Code/PDD-Signs/CSS/styles.css">
     <title>Знаки ПДД РФ</title>
 </head>
 <body>
-    <div class="card">
-<<<<<<< HEAD
-        <div class="caption">
-            <div class="warning">
-                <div class="sign">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <circle cx="8" cy="8" r="8" fill="#333333"/>
-                        <circle cx="8" cy="8" r="6" stroke="#F40000" stroke-width="2"/>
-                    </svg>
-                </div>
-                <p>Предупреждающие</p>
-            </div>
-            <h2>Железнодорожный переезд со&nbsp;шлагбаумом</h2>
-        </div>
-    </div>
-    <div class="card">
-        <div class="caption">
-            <div class="warning">
-                <div class="sign">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <circle cx="8" cy="8" r="8" fill="white"/>
-                        <circle cx="8" cy="8" r="6" stroke="#F40000" stroke-width="2"/>
-                    </svg>
-                </div>
-                <p>Предупреждающие</p>
-            </div>
-            <h2>Железнодорожный переезд со&nbsp;шлагбаумом</h2>
-        </div>
-    </div>
-    <div class="card">
-        <div class="caption">
-            <div class="warning">
-                <div class="sign">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <circle cx="8" cy="8" r="8" fill="white"/>
-                        <circle cx="8" cy="8" r="6" stroke="#F40000" stroke-width="2"/>
-                    </svg>
-                </div>
-                <p>Предупреждающие</p>
-            </div>
-            <h2>Железнодорожный переезд со&nbsp;шлагбаумом</h2>
-        </div>
-    </div>
-    <div class="card">
-        <div class="caption">
-            <div class="warning">
-                <div class="sign">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                        <circle cx="8" cy="8" r="8" fill="white"/>
-                        <circle cx="8" cy="8" r="6" stroke="#F40000" stroke-width="2"/>
-                    </svg>
-                </div>
-                <p>Предупреждающие</p>
-            </div>
-            <h2>Железнодорожный переезд со&nbsp;шлагбаумом</h2>
-=======
-        <div class=caption>
-            <p class="label-warning">Предупреждающие</p>
-            <h2 class="card-h2">Железнодорожный переезд со шлагбаумом</h2>
->>>>>>> 538fce3e2e8322dac863098712075bf4f819c576
-        </div>
+    <div class="page-wrapper">
+        
     </div>
 </body>
 </html>
