Start of grid layout

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,8 +12,19 @@
     <title>Знаки ПДД РФ</title>
 </head>
 <body>
-    <div class="page-wrapper">
-        
+    <div class="container">
+        <div class="card">
+            <h2>Card-1</h2>
+        </div>
+        <div class="card">
+            <h2>Card-2</h2>
+        </div>
+        <div class="card">
+            <h2>Card-3</h2>
+        </div>
+        <div class="card">
+            <h2>Card-4</h2>
+        </div>
     </div>
 </body>
 </html>
