Added :nth, grid with repeat and flexes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,16 +14,52 @@
 <body>
     <div class="container">
         <div class="card">
-            <h2>Card-1</h2>
+            <div class="caption">
+                <h2>Заголовок в две строки</h2>
+                <p>Параграф текста</p>
+            </div>
         </div>
         <div class="card">
-            <h2>Card-2</h2>
+            <div class="caption">
+                <h2>Заголовок в две строки</h2>
+                <p>Параграф текста</p>
+            </div>
         </div>
         <div class="card">
-            <h2>Card-3</h2>
+            <div class="caption">
+                <h2>Заголовок в две строки</h2>
+                <p>Параграф текста</p>
+            </div>
         </div>
         <div class="card">
-            <h2>Card-4</h2>
+            <div class="caption">
+                <h2>Заголовок в две строки</h2>
+                <p>Параграф текста</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="caption">
+                <h2>Заголовок в две строки</h2>
+                <p>Параграф текста</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="caption">
+                <h2>Заголовок в две строки</h2>
+                <p>Параграф текста</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="caption">
+                <h2>Заголовок в две строки</h2>
+                <p>Параграф текста</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="caption">
+                <h2>Заголовок в две строки</h2>
+                <p>Параграф текста</p>
+            </div>
         </div>
     </div>
 </body>
