--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,51 +14,57 @@
 <body>
     <div class="container">
         <div class="card">
+            <div class="sign">
+                <svg xmlns="http://www.w3.org/2000/svg" width="200" height="175" viewBox="0 0 200 175" fill="none">
+                    <path d="M188.202 138.482L115.864 17.9183C108.678 5.94257 91.3219 5.94255 84.1364 17.9183L11.7983 138.482C4.39987 150.813 13.2819 166.5 27.6619 166.5H172.338C186.718 166.5 195.6 150.813 188.202 138.482Z" fill="#F2F2F2" stroke="#F20000" stroke-width="17" stroke-linejoin="round"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M60 91L66 85L72 91V95H77V91L83 85L89 91V95H94V91L100 85L106 91V95H111V91L117 85L123 91V95H128V91L134 85L140 91V95H146V99H140V134H146V138H140V143H128V138H123V143H111V138H106V143H94V138H89V143H77V138H72V143H60V138H54V134H60V99H54V95H60V91ZM72 99V134H77V99H72ZM89 99V134H94V99H89ZM106 99V134H111V99H106ZM123 99V134H128V99H123Z" fill="#252525"/>
+                </svg>
+            </div>
             <div class="caption">
-                <h2>Заголовок в две строки</h2>
-                <p>Параграф текста</p>
+                <p>Знак 1.1.</p>
+                <h2>Железнодорожный переезд со&nbsp;шлагбаумом</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
-                <h2>Заголовок в две строки</h2>
-                <p>Параграф текста</p>
+                <p>Знак 1.2.</p>
+                <h2>Железнодорожный переезд без&nbsp;шлагбаума</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
-                <h2>Заголовок в две строки</h2>
-                <p>Параграф текста</p>
+                <p>Знак 1.3.1</p>
+                <h2>Однопутная железная дорога</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
-                <h2>Заголовок в две строки</h2>
-                <p>Параграф текста</p>
+                <p>Знак 1.3.2</p>
+                <h2>Многопутная железная дорога</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
-                <h2>Заголовок в две строки</h2>
-                <p>Параграф текста</p>
+                <p>Знак 1.4.</p>
+                <h2>Приближение к&nbsp;железнодорожному переезду</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
-                <h2>Заголовок в две строки</h2>
-                <p>Параграф текста</p>
+                <p>Знак 1.5.</p>
+                <h2>Пересечение с&nbsp;трамвайной линией</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
-                <h2>Заголовок в две строки</h2>
-                <p>Параграф текста</p>
+                <p>Знак 1.6.</p>
+                <h2>Пересечение равнозначных дорог</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
-                <h2>Заголовок в две строки</h2>
-                <p>Параграф текста</p>
+                <p>Знак 1.7.</p>
+                <h2>Пересечение с&nbsp;круговым движением</h2>
             </div>
         </div>
     </div>
