Fixed divs in .card, added label-warning

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,48 +21,62 @@
                 </svg>
             </div>
             <div class="caption">
+                <p class="label-warning">Предупреждающий</p>
                 <p>Знак 1.1.</p>
                 <h2>Железнодорожный переезд со&nbsp;шлагбаумом</h2>
             </div>
         </div>
         <div class="card">
+            <div class="sign">
+                <svg xmlns="http://www.w3.org/2000/svg" width="200" height="175" viewBox="0 0 200 175" fill="none">
+                    <path d="M188.202 138.482L115.864 17.9183C108.678 5.94257 91.3219 5.94255 84.1364 17.9183L11.7983 138.482C4.39987 150.813 13.2819 166.5 27.6619 166.5H172.338C186.718 166.5 195.6 150.813 188.202 138.482Z" fill="#F2F2F2" stroke="#F20000" stroke-width="17" stroke-linejoin="round"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M54.4583 83.9028L67.6 62H104.493C108.127 62 111.728 62.748 115.088 64.1323C123.969 67.791 131.673 70.6125 138.858 72.7635L149 89.6668V99.5807C149 100.736 149.98 101.649 151.134 101.599C152.842 101.525 154.497 101.499 156.111 101.519L171.826 127.71C151.064 128.06 136.226 132.019 115.892 142.017C112.003 143.929 107.738 145 103.404 145H80.0842C76.1503 146.124 72.2169 147.456 68.28 149H104L95 155H55.0098C53.1512 155.952 51.2908 156.952 49.4282 158H35.9342C43.8646 152.847 51.7798 148.519 59.7054 145H59.5523C49.1245 145 41.4833 135.185 44.0411 125.075L54.4583 83.9028ZM117.428 158H103.934C127.627 142.606 151.185 134.57 175.289 133.482L179.419 140.364C158.644 140.636 138.17 146.328 117.428 158ZM67.1741 75C65.3151 75 63.7011 76.2807 63.2787 78.0911L58.1454 100.091C57.56 102.6 59.4644 105 62.0407 105H95.7208C97.6275 105 99.2691 103.654 99.6431 101.784L104.043 79.7845C104.538 77.3093 102.645 75 100.121 75H67.1741ZM74.7295 78C75.4553 78 76.1227 78.3951 76.4853 79.0238C81.3048 87.3798 86.7851 93.1477 94.7192 98.4571C95.3731 98.8947 95.709 99.6805 95.5563 100.452C95.3783 101.352 94.5893 102 93.6724 102H64.5144C63.2281 102 62.2763 100.803 62.5657 99.55L67.1837 79.55C67.3933 78.6427 68.2013 78 69.1325 78H74.7295ZM129 83.0385C129 80.9253 127.67 79.0444 125.69 78.3062C123.929 77.6496 122.124 76.956 120.268 76.2234C118.52 75.5331 116.557 76.5789 116.184 78.4213L111.285 102.646C110.695 105.563 113.398 108.078 116.282 107.345C119.634 106.493 122.8 105.741 125.801 105.086C127.66 104.68 129 103.045 129 101.142V83.0385ZM142.749 83.8763C144.071 84.2365 145 85.4298 145 86.8001V99.2218C145 100.77 143.821 102.061 142.283 102.241C140.744 102.42 139.161 102.634 137.525 102.884C135.682 103.165 134 101.755 134 99.8909V83.9991C134 82.6367 135.333 81.673 136.633 82.081C138.714 82.734 140.747 83.3312 142.749 83.8763ZM61 131C61 133.761 58.7614 136 56 136C53.2386 136 51 133.761 51 131C51 128.239 53.2386 126 56 126C58.7614 126 61 128.239 61 131ZM102 131C102 133.761 99.7614 136 97 136C94.2386 136 92 133.761 92 131C92 128.239 94.2386 126 97 126C99.7614 126 102 128.239 102 131Z" fill="#252525"/>
+                  </svg>
+            </div>
             <div class="caption">
+                <p class="label-warning">Предупреждающий</p>
                 <p>Знак 1.2.</p>
                 <h2>Железнодорожный переезд без&nbsp;шлагбаума</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
+                <p class="label-warning">Предупреждающий</p>
                 <p>Знак 1.3.1</p>
                 <h2>Однопутная железная дорога</h2>
             </div>
         </div>
         <div class="card">
-            <div class="caption">
+            <div class="caption"> 
+                <p class="label-warning">Предупреждающий</p>
                 <p>Знак 1.3.2</p>
                 <h2>Многопутная железная дорога</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
+                <p class="label-warning">Предупреждающий</p>
                 <p>Знак 1.4.</p>
                 <h2>Приближение к&nbsp;железнодорожному переезду</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
+                <p class="label-warning">Предупреждающий</p>
                 <p>Знак 1.5.</p>
                 <h2>Пересечение с&nbsp;трамвайной линией</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
+                <p class="label-warning">Предупреждающий</p>
                 <p>Знак 1.6.</p>
                 <h2>Пересечение равнозначных дорог</h2>
             </div>
         </div>
         <div class="card">
             <div class="caption">
+                <p class="label-warning">Предупреждающий</p>
                 <p>Знак 1.7.</p>
                 <h2>Пересечение с&nbsp;круговым движением</h2>
             </div>
