--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="file:///E:/Code/PDD-Signs/CSS/reset.css">
-    <link rel="stylesheet" href="file:///E:/Code/PDD-Signs/CSS/styles.css">
+    <link rel="stylesheet" href="/Users/kozinym/Documents/PDD-Signs/CSS/reset.css">
+    <link rel="stylesheet" href="/Users/kozinym/Documents/PDD-Signs/CSS/styles.css">
     <title>Знаки ПДД РФ</title>
 </head>
 <body>
