--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,16 +14,6 @@
 </head>
 <body>
     <div class="container">
-        
-        <div class="menu">
-            <div class="ic-menu">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" viewBox="0 0 30 25" fill="none">
-                    <rect width="30" height="5" fill="#3E3E3E"/>
-                    <rect y="10" width="30" height="5" fill="#3E3E3E"/>
-                    <rect y="20" width="15" height="5" fill="#3E3E3E"/>
-                </svg>
-            </div>
-        </div>
 
         <div class="cards">
 
@@ -35,9 +25,49 @@
                     </svg>
                 </div>
                 <div class="caption">
-                    <p class="label-warning">Предупреждающий</p>
+                    <span class="label-warning">Предупреждающий</span>
                     <p>Знак 1.1.</p>
-                    <h2>Железнодорожный переезд со&nbsp;шлагбаумом</h2>
+                    <h2 class="popup-trigger">Железнодорожный переезд со&nbsp;шлагбаумом</h2>
+                </div>
+
+                <div class="popup" id="myPopup">
+                    <div class="popup-content">
+                        <div class="sign-popup">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="175" viewBox="0 0 200 175" fill="none">
+                                <path d="M188.202 138.482L115.864 17.9183C108.678 5.94257 91.3219 5.94255 84.1364 17.9183L11.7983 138.482C4.39987 150.813 13.2819 166.5 27.6619 166.5H172.338C186.718 166.5 195.6 150.813 188.202 138.482Z" fill="#F2F2F2" stroke="#F20000" stroke-width="17" stroke-linejoin="round"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M60 91L66 85L72 91V95H77V91L83 85L89 91V95H94V91L100 85L106 91V95H111V91L117 85L123 91V95H128V91L134 85L140 91V95H146V99H140V134H146V138H140V143H128V138H123V143H111V138H106V143H94V138H89V143H77V138H72V143H60V138H54V134H60V99H54V95H60V91ZM72 99V134H77V99H72ZM89 99V134H94V99H89ZM106 99V134H111V99H106ZM123 99V134H128V99H123Z" fill="#252525"/>
+                            </svg>
+                        </div>
+
+                        <span class="label-warning">Предупреждающий</span>
+                        <p>Знак 1.1.</p>
+                        <h2 class>Железнодорожный переезд со&nbsp;шлагбаумом</h2>
+
+                        <p>
+                            Предупреждает о приближении к ж/д переезду со шлагбаумом. Вне населённого пункта (н.п.) устанавливается
+                            на расстоянии 150-300 м, в населённом пункте — на расстоянии 50-100 м. Знак может устанавливаться
+                            и на ином расстоянии, но при этом расстояние оговаривается таб.8.1.1 «Расстояние до объекта».
+                        </p>
+
+                        <h3>Особенности:</h3>
+                        <p>
+                            Водителю ТС пересекать ж/д пути можно только по ж/д переездам,
+                            уступая дорогу поезду (локомотиву, дрезине).
+                        </p>
+
+                        <h3>Запрещается:</h3>
+                        <ul>
+                            <li>обгон на ж/д переездах и ближе, чем за 100 м перед ними;</li>
+                            <li>остановка и стоянка на ж/д переездах;</li>
+                            <li>стоянка ближе 50 м от ж/д переездов;</li>
+                            <li>разворот;</li>
+                            <li>движение задним ходом;</li>
+                            <li>провозить через переезд в нетранспортном положении сельскохозяйственные, дорожные, строительные и другие машины;</li>
+                            <li>движение тихоходных машин, скорость которых менее 8 км/ч, а также тракторных саней-волокуш без разрешения начальника дистанции пути;</li>
+                            <li>объезжать с выездом на полосу встречного движения стоящие перед закрытым шлагбаумом ТС;</li>
+                            <li>самовольно открывать шлагбаум.</li>
+                        </ul   >
+                    </div>
                 </div>
             </div>
 
@@ -50,9 +80,9 @@
                 </div>
 
                 <div class="caption">
-                    <p class="label-warning">Предупреждающий</p>
+                    <span class="label-warning">Предупреждающий</span>
                     <p>Знак 1.2.</p>
-                    <h2>Железнодорожный переезд без&nbsp;шлагбаума</h2>
+                    <h2 class="popup-trigger">Железнодорожный переезд без&nbsp;шлагбаума</h2 class="popup-trigger">
                 </div>
             </div>
             <div class="card">
@@ -67,9 +97,9 @@
                 </div>
 
                 <div class="caption">
-                    <p class="label-warning">Предупреждающий</p>
+                    <span class="label-warning">Предупреждающий</span>
                     <p>Знак 1.3.1.</p>
-                    <h2>Однопутная железная дорога</h2>
+                    <h2 class="popup-trigger">Однопутная железная дорога</h2 class="popup-trigger">
                 </div>
             </div>
             <div class="card">
@@ -85,40 +115,88 @@
                 </div>
 
                 <div class="caption"> 
-                    <p class="label-warning">Предупреждающий</p>
+                    <span class="label-warning">Предупреждающий</span>
                     <p>Знак 1.3.2.</p>
-                    <h2>Многопутная железная дорога</h2>
+                    <h2 class="popup-trigger">Многопутная железная дорога</h2 class="popup-trigger">
                 </div>
             </div>
             <div class="card">
+                <div class="sign">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="175" viewBox="0 0 200 175" fill="none">
+                        <path d="M0 5C0 2.23858 2.23858 0 5 0H51C53.7614 0 56 2.23858 56 5V77C56 79.7614 53.7614 82 51 82H5C2.23858 82 0 79.7614 0 77V5Z" fill="#F2F2F2"/>
+                        <path d="M56 98C56 95.2386 53.7614 93 51 93H5C2.23858 93 0 95.2386 0 98V170C0 172.761 2.23858 175 5 175H51C53.7614 175 56 172.761 56 170V98Z" fill="#F2F2F2"/>
+                        <path d="M72 5C72 2.23858 74.2386 0 77 0H123C125.761 0 128 2.23858 128 5V77C128 79.7614 125.761 82 123 82H77C74.2386 82 72 79.7614 72 77V5Z" fill="#F2F2F2"/>
+                        <path d="M128 98C128 95.2386 125.761 93 123 93H77C74.2386 93 72 95.2386 72 98V170C72 172.761 74.2386 175 77 175H123C125.761 175 128 172.761 128 170V98Z" fill="#F2F2F2"/>
+                        <path d="M144 5C144 2.23858 146.239 0 149 0H195C197.761 0 200 2.23858 200 5V77C200 79.7614 197.761 82 195 82H149C146.239 82 144 79.7614 144 77V5Z" fill="#F2F2F2"/>
+                        <path d="M200 98C200 95.2386 197.761 93 195 93H149C146.239 93 144 95.2386 144 98V170C144 172.761 146.239 175 149 175H195C197.761 175 200 172.761 200 170V98Z" fill="#F2F2F2"/>
+                        <path d="M0 34L56 4V14L0 44V34Z" fill="#F20000"/>
+                        <path d="M0 51L56 21V31L0 61V51Z" fill="#F20000"/>
+                        <path d="M56 38L0 68V78L56 48V38Z" fill="#F20000"/>
+                        <path d="M56 127L0 97V107L56 137V127Z" fill="#F20000"/>
+                        <path d="M56 144L0 114V124L56 154V144Z" fill="#F20000"/>
+                        <path d="M0 131L56 161V171L0 141V131Z" fill="#F20000"/>
+                        <path d="M72 43L128 13V23L72 53V43Z" fill="#F20000"/>
+                        <path d="M72 60L128 30V40L72 70V60Z" fill="#F20000"/>
+                        <path d="M128 136L72 106V116L128 146V136Z" fill="#F20000"/>
+                        <path d="M128 153L72 123V133L128 163V153Z" fill="#F20000"/>
+                        <path d="M144 51L200 21V31L144 61V51Z" fill="#F20000"/>
+                        <path d="M200 144L144 114V124L200 154V144Z" fill="#F20000"/>
+                      </svg>
+                </div>
                 <div class="caption">
-                    <p class="label-warning">Предупреждающий</p>
+                    <span class="label-warning">Предупреждающий</span>
                     <p>Знак 1.4.</p>
-                    <h2>Приближение к&nbsp;железнодорожному переезду</h2>
+                    <h2 class="popup-trigger">Приближение к&nbsp;железнодорожному переезду</h2 class="popup-trigger">
                 </div>
             </div>
 
             <div class="card">
+                <div class="sign">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="175" viewBox="0 0 200 175" fill="none">
+                        <path d="M188.202 138.482L115.864 17.9183C108.678 5.94257 91.3219 5.94255 84.1364 17.9183L11.7983 138.482C4.39987 150.813 13.2819 166.5 27.6619 166.5H172.338C186.718 166.5 195.6 150.813 188.202 138.482Z" fill="#F2F2F2" stroke="#F20000" stroke-width="17" stroke-linejoin="round"/>
+                        <path d="M74.7953 78C75.5211 78 76.1885 78.3951 76.5511 79.0238C81.3705 87.3798 86.8509 93.1477 94.785 98.4571C95.4389 98.8947 95.7748 99.6805 95.6221 100.452C95.4441 101.352 94.655 102 93.7382 102H64.5802C63.2939 102 62.3421 100.803 62.6315 99.55L67.2495 79.55C67.459 78.6427 68.267 78 69.1983 78H74.7953Z" fill="#252525"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M36 158H49.494C51.3566 156.952 53.217 155.952 55.0756 155H95.0658L104.066 149H68.3458C72.2827 147.456 76.2161 146.124 80.15 145H103.47C107.803 145 112.068 143.929 115.957 142.017C136.27 132.029 151.098 128.068 171.827 127.711L156.111 101.518C154.517 101.5 152.884 101.526 151.2 101.599C150.045 101.649 149.066 100.736 149.066 99.5807V89.7764L138.844 72.7395C132.591 70.8642 125.944 68.4813 118.469 65.481L126.467 52.3942C126.531 52.4067 126.595 52.4193 126.659 52.4321L123.31 46.8507C121.284 46.6176 119.241 46.5 117.192 46.5H113C105.108 46.5 97.2713 47.824 89.817 50.4167L89.1787 50.6388C87.8746 51.0924 87.1852 52.5172 87.6388 53.8213C88.0924 55.1254 89.5172 55.8148 90.8213 55.3612L91.4596 55.1392C94.8643 53.955 98.3549 53.0556 101.895 52.4472L99.7724 62H67.6658L54.5241 83.9028L44.1069 125.075C41.5491 135.185 49.1903 145 59.6181 145H59.7712C51.8456 148.519 43.9304 152.847 36 158ZM107.17 51.7597C109.106 51.5869 111.051 51.5 113 51.5H117.192C118.485 51.5 119.775 51.5516 121.059 51.6543L113.759 63.5993C110.911 62.5942 107.916 62.0404 104.894 62.0021L107.17 51.7597ZM67.2399 75C65.3809 75 63.7669 76.2807 63.3445 78.0911L58.2112 100.091C57.6257 102.6 59.5302 105 62.1065 105H95.7865C97.6933 105 99.3349 103.654 99.7089 101.784L104.109 79.7845C104.604 77.3093 102.711 75 100.187 75H67.2399ZM129.066 83.0385C129.066 80.9253 127.736 79.0444 125.756 78.3062C123.994 77.6496 122.19 76.956 120.334 76.2234C118.586 75.5331 116.623 76.5789 116.25 78.4213L111.351 102.646C110.761 105.563 113.463 108.078 116.348 107.345C119.7 106.493 122.865 105.741 125.867 105.086C127.726 104.68 129.066 103.045 129.066 101.142V83.0385ZM142.814 83.8763C144.136 84.2365 145.066 85.4298 145.066 86.8001V99.2218C145.066 100.77 143.887 102.061 142.349 102.241C140.81 102.42 139.226 102.634 137.591 102.884C135.748 103.165 134.066 101.755 134.066 99.8909V83.9991C134.066 82.6367 135.399 81.673 136.699 82.081C138.78 82.734 140.813 83.3312 142.814 83.8763ZM61.0658 131C61.0658 133.761 58.8272 136 56.0658 136C53.3043 136 51.0658 133.761 51.0658 131C51.0658 128.239 53.3043 126 56.0658 126C58.8272 126 61.0658 128.239 61.0658 131ZM102.066 131C102.066 133.761 99.8272 136 97.0658 136C94.3043 136 92.0658 133.761 92.0658 131C92.0658 128.239 94.3043 126 97.0658 126C99.8272 126 102.066 128.239 102.066 131Z" fill="#252525"/>
+                        <path d="M175.291 133.485C151.209 134.584 127.672 142.62 104 158H117.494C138.214 146.341 158.667 140.648 179.419 140.365L175.291 133.485Z" fill="#252525"/>
+                    </svg>
+                </div>
+
                 <div class="caption">
-                    <p class="label-warning">Предупреждающий</p>
+                    <span class="label-warning">Предупреждающий</span>
                     <p>Знак 1.5.</p>
-                    <h2>Пересечение с&nbsp;трамвайной линией</h2>
+                    <h2 class="popup-trigger">Пересечение с&nbsp;трамвайной линией</h2 class="popup-trigger">
                 </div>
             </div>
 
             <div class="card">
+                <div class="sign">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="175" viewBox="0 0 200 175" fill="none">
+                        <path d="M188.202 138.482L115.864 17.9183C108.678 5.94257 91.3219 5.94255 84.1364 17.9183L11.7983 138.482C4.39987 150.813 13.2819 166.5 27.6619 166.5H172.338C186.718 166.5 195.6 150.813 188.202 138.482Z" fill="#F2F2F2" stroke="#F20000" stroke-width="17" stroke-linejoin="round"/>
+                        <rect x="125.418" y="74" width="15" height="86" transform="rotate(45 125.418 74)" fill="#252525"/>
+                        <rect x="135.418" y="135" width="15" height="86" transform="rotate(135 135.418 135)" fill="#252525"/>
+                    </svg>
+                </div>
+
                 <div class="caption">
-                    <p class="label-warning">Предупреждающий</p>
+                    <span class="label-warning">Предупреждающий</span>
                     <p>Знак 1.6.</p>
-                    <h2>Пересечение равнозначных дорог</h2>
+                    <h2 class="popup-trigger">Пересечение равнозначных дорог</h2 class="popup-trigger">
                 </div>
             </div>
 
             <div class="card">
+                <div class="sign">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="175" viewBox="0 0 200 175" fill="none">
+                        <path d="M188.202 138.482L115.864 17.9183C108.678 5.94257 91.3219 5.94255 84.1364 17.9183L11.7983 138.482C4.39987 150.813 13.2819 166.5 27.6619 166.5H172.338C186.718 166.5 195.6 150.813 188.202 138.482Z" fill="#F2F2F2" stroke="#F20000" stroke-width="17" stroke-linejoin="round"/>
+                        <path d="M82.2068 61.0655L67.412 79.7712L91.009 83.231L88.534 76.9984C92.2155 75.6258 96.1264 74.915 100.085 74.915C105.889 74.915 111.59 76.4427 116.616 79.3445C121.642 82.2463 125.816 86.42 128.718 91.4461L137.378 86.4461C133.598 79.8999 128.162 74.4638 121.616 70.6843C115.07 66.9048 107.644 64.915 100.085 64.915C94.8582 64.915 89.6952 65.8664 84.8426 67.7029L82.2068 61.0655Z" fill="#252525"/>
+                        <path d="M67.502 146.266L72.0609 140.673C68.3764 137.515 65.2374 133.744 62.7919 129.508C59.0124 122.962 57.0227 115.536 57.0227 107.977C57.0227 100.418 59.0124 92.9924 62.7919 86.4461L71.4522 91.4461C68.5504 96.4722 67.0227 102.174 67.0227 107.977C67.0227 113.781 68.5504 119.482 71.4522 124.508C73.2882 127.688 75.6334 130.527 78.3815 132.919L82.5703 127.78L91.0455 150.072L67.502 146.266Z" fill="#252525"/>
+                        <path d="M132.322 114.654C131.612 118.101 130.353 121.427 128.579 124.5C125.682 129.517 121.517 133.682 116.5 136.579C111.483 139.475 105.793 141 99.9999 141V151C107.548 151 114.963 149.013 121.5 145.239C128.037 141.465 133.465 136.037 137.239 129.5C139.895 124.9 141.666 119.865 142.482 114.654H149.694L137.769 94L125.845 114.654H132.322Z" fill="#252525"/>
+                    </svg>
+                </div>
+
                 <div class="caption">
-                    <p class="label-warning">Предупреждающий</p>
+                    <span class="label-warning">Предупреждающий</span>
                     <p>Знак 1.7.</p>
-                    <h2>Пересечение с&nbsp;круговым движением</h2>
+                    <h2 class="popup-trigger">Пересечение с&nbsp;круговым движением</h2 class="popup-trigger">
                 </div>
             </div>
         </div>
